# rust-aws-lambda

./: .gitignore  Cargo.toml  README.md  cdk.json  package-lock.json  package.json
lambda/rs_hello/: Cargo.toml  README.md
lambda/rs_hello/src/: main.rs
lib/: rust-aws-lambda-stack.ts
test/: rust-aws-lambda.test.ts
