[package]
name = "rs_hello"
version = "0.1.0"
authors = ["pmagaz <magazpablo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
log = "0.4.14"
simple_logger = "1.11.0"
tokio = "1.6.1"
aws_lambda_events = "0.5.0"
http = "0.2.5"
